# pim

./: .dockerignore  .env.local.example  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  .taplo.toml  AGENT.md  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTRUCTIONS.md  Justfile  README.md  buf.yaml  compose.yml  deny.toml  docker-compose.yml  release-please-config.json  release-plz.toml  rustfmt.toml
.github/: commit-msg.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  pr-title.yml  release-plz.yml  release.yml
apps/api-gateway/: CHANGELOG.md  Cargo.toml  config.example.toml
apps/api-gateway/src/: lib.rs  main.rs
apps/api-gateway/src/api/v1/: dto.rs  routes.rs
apps/api-gateway/src/api/v1/handlers/: auth.rs  user.rs
apps/api-gateway/src/config/: app_config.rs  env.rs  mod.rs  settings.rs
apps/api-gateway/src/errors/: app_error.rs  auth_error.rs  mod.rs  validation_error.rs
apps/api-gateway/src/middlewares/: auth.rs  http_metrics.rs  mod.rs  request_id.rs
apps/api-gateway/src/router/: mod.rs  register.rs
apps/api-gateway/src/services/: user_service.rs
apps/auth-service/: Cargo.toml  config.example.toml
apps/auth-service/src/: config.rs  jwt.rs  main.rs
apps/user-service/: CHANGELOG.md  Cargo.toml  config.example.toml
apps/user-service/src/: config.rs  main.rs
bootstrap/: dev.toml  prod.example.toml  seed.dev.toml  steps.yaml
crates/gateway/: Cargo.toml
crates/gateway/src/: main.rs
crates/gateway/src/api/v1/: dto.rs  mod.rs  routes.rs
crates/gateway/src/api/v1/handlers/: auth.rs  user.rs
crates/gateway/src/config/: env.rs  settings.rs
crates/gateway/src/errors/: app_error.rs  error_response.rs  mod.rs  user_error.rs
crates/gateway/src/middlewares/: auth.rs  mod.rs  request_id.rs  request_logging.rs
crates/gateway/src/router/: register.rs
crates/gateway/src/utils/: time.rs
crates/pim-core/: Cargo.toml
docs/: configuration.md  design.md  pull_request_template.md
docs/decisions/: 0000-template.md  0001-record-architecture-decisions.md  0002-surface-adrs-at-pr-time.md  0003-delegate-identity-to-zitadel.md  0004-validate-tokens-via-zitadel-introspection.md  0005-bootstrap-local-zitadel-with-pim-bootstrap-tool.md  0006-remove-auth-service.md  0007-user-service-as-zitadel-proxy.md  0008-clients-authenticate-directly-with-zitadel.md  0009-adopt-apps-libs-proto-monorepo-layout.md  0010-structured-logging-and-typed-errors.md  0011-red-metrics-via-prometheus-pull.md  0012-three-layer-config-split-by-sensitivity.md  0013-dev-prod-parity-via-declarative-bootstrap.md  0014-use-release-plz-for-rust-workspace-release-automation.md  0015-allocate-service-ports-with-fixed-policy.md  0016-rest-client-for-zitadel-management-api.md  0017-ensure-ops-idempotent-state-machine.md  README.md
gateway/: Cargo.toml
gateway/src/: main.rs
libs/common/: Cargo.toml
libs/common/src/: config.rs  env.rs  lib.rs
libs/common/src/telemetry/: grpc_metrics.rs  labels.rs  metrics_http.rs  mod.rs
libs/infra-auth/: CHANGELOG.md  Cargo.toml
libs/infra-auth/src/: claims.rs  error.rs  jwt_manager.rs  lib.rs
libs/infra-config/: CHANGELOG.md  Cargo.toml
libs/infra-config/src/: env.rs  features.rs  lib.rs  loader.rs
libs/infra-telemetry/: CHANGELOG.md  Cargo.toml
libs/infra-telemetry/src/: grpc_metrics.rs  labels.rs  lib.rs  metrics_http.rs
libs/rpc-proto/: CHANGELOG.md  Cargo.toml  build.rs
libs/rpc-proto/src/: lib.rs
libs/zitadel-rest-client/: Cargo.toml  README.md
libs/zitadel-rest-client/src/: app.rs  auth.rs  client.rs  error.rs  lib.rs  pagination.rs  project.rs  project_role.rs  user.rs  user_grant.rs  user_key.rs
plans/: 001-observability-metrics.md  001-pim-bootstrap-phase3.md  002-monorepo-restructure.plan.md  003-zitadel-auth-integration.md  004-jwt-profile-introspection.md  005-ci-remaining-issues.md  006-dev-bootstrap.md  007-release-plz-migration.md  enterprise-logger-error.plan.md
proto/auth/v1/: auth.proto
proto/user/v1/: user.proto
tools/pim-bootstrap/: CHANGELOG.md  Cargo.toml
tools/pim-bootstrap/src/: cli.rs  config.rs  lib.rs  main.rs
tools/pim-bootstrap/src/ensure/: driver.rs  driver_tests.rs  mod.rs  op.rs  report.rs  state.rs
tools/pim-bootstrap/src/ops/: api_app.rs  context.rs  mod.rs  project.rs  project_roles.rs  service_account.rs
tools/pim-bootstrap/src/sinks/: env_file.rs  jwt_key.rs  mod.rs  service_config.rs
