[workspace]
members = ["libs/rpc-proto", "libs/infra-config", "libs/infra-telemetry", "apps/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["wowuliao11"]
license = "MIT"

[workspace.dependencies]
# HTTP Framework
actix-web = "4"
actix-rt = "2"

# gRPC Framework
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
async-trait = "0.1"

# Security
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }

# Error Handling
thiserror = "2.0.17"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.15.19"

# Utilities
uuid = { version = "1.20", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
