[workspace]
members = ["libs/*", "apps/*", "tools/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["wowuliao11"]
license = "MIT"

[workspace.dependencies]
# HTTP Framework
actix-web = "4"
actix-rt = "2"

# gRPC Framework
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
tonic-prost-build = "0.14"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
async-trait = "0.1"

# Authentication (Zitadel OIDC)
zitadel = { version = "5", features = ["actix", "oidc", "credentials"] }
reqwest = { version = "0.12", features = ["json"] }

# Error Handling
thiserror = "2.0.17"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.15.19"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Utilities
uuid = { version = "1.20", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
