[package]
name = "api-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "api-gateway"
path = "src/main.rs"

[dependencies]
# Workspace crates
infra-config = { path = "../../libs/infra-config" }
infra-telemetry = { path = "../../libs/infra-telemetry", features = [
    "prometheus",
    "http",
] }

# External dependencies
actix-web.workspace = true
actix-rt.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonwebtoken.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
futures-util.workspace = true

# Metrics facade
metrics = "0.22"
