[package]
name = "user-service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "user-service"
path = "src/main.rs"

[dependencies]
# Workspace crates
rpc-proto = { path = "../../libs/rpc-proto" }
common = { path = "../../libs/common" }

# gRPC
tonic.workspace = true
prost.workspace = true

# Async Runtime
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true

# Error Handling
thiserror.workspace = true
anyhow.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true

# Configuration
config.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
